--- a/views/reportes/filtrosReporteHoras.twig
+++ b/views/reportes/filtrosReporteHoras.twig
@@ -9,11 +9,9 @@
 					<b>Fecha Inicio</b> <br>
 					{{ text_field_tag("fecha_inicio", '', {class:'form-control fecha'}) }}
 					<select class="form-control form-select select2" name="hora_inicio" id="hora_inicio" style="width: 60px;">
-						<option value=""></option>
 						<option v-for="(v,k) in horas" v-html="v" :value="k"></option>
 					</select> :
 					<select class="form-control form-select select2" name="minuto_inicio" id="minuto_inicio" style="width: 60px;">
-						<option value=""></option>
 						<option v-for="(v,k) in minutos" v-html="v" :value="k"></option>
 					</select>
 				</div>
@@ -22,11 +20,9 @@
 					<b>Fecha Fin</b> <br>
 					{{ text_field_tag("fecha_fin", '', {class:'form-control fecha'}) }}
 					<select class="form-control form-select select2" name="hora_fin" id="hora_fin" style="width: 60px;">
-						<option value=""></option>
 						<option v-for="(v,k) in horas" v-html="v" :value="k"></option>
 					</select> :
 					<select class="form-control form-select select2" name="minuto_fin" id="minuto_fin" style="width: 60px;">
-						<option value=""></option>
 						<option v-for="(v,k) in minutos" v-html="v" :value="k"></option>
 					</select>
 				</div>
@@ -50,6 +46,10 @@
             });
 
             $(function () {
+				$("#hora_inicio").val('0');
+				$("#minuto_inicio").val('0');
+				$("#hora_fin").val('0');
+				$("#minuto_fin").val('0');
                 $('.fecha').datepicker({
                     dateFormat: 'yy-mm-dd',
                     showButtonPanel: true
