--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -2880,6 +2880,14 @@
                     $('#exportFormNegociacionAutomatica').submit();
                 });
 
+                $('#form-edit-seguimiento').on('keyup keypress', function(e) {
+                    var keyCode = e.keyCode || e.which;
+                    if (keyCode === 13) {
+                        e.preventDefault();
+                        return false;
+                    }
+                });
+
                 $(function () {
                     $('.fecha').datepicker({
                         dateFormat: 'yy-mm-dd',
