--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -11,12 +11,12 @@
                     <div class=" row mb-4">
                         <label for="inputName" class="col-md-2 form-label">Nombres *</label>
                         <div class="col-md-4 col-informacion">
-                            <input type="text" readonly class="form-control-plaintext" v-model="cliente.nombres">
+                            <h3 style="font-weight: bold;"><span v-html="cliente.nombres"></span></h3>
                         </div>
 
                         <label for="inputName" class="col-md-2 form-label">Cédula *</label>
                         <div class="col-md-4 col-informacion">
-                            <input type="text" readonly class="form-control-plaintext" v-model="cliente.cedula">
+                            <h3 style="font-weight: bold;"><span v-html="cliente.cedula"></span></h3>
                         </div>
                     </div>
 
