--- a/views/reportes/filtrosProduccionPlaza.twig
+++ b/views/reportes/filtrosProduccionPlaza.twig
@@ -6,9 +6,9 @@
 		<form id="filtros">
 			<div class="row ">
 				<div class="col-sm-3">
-					<b>Plaza</b> <br>
+					<b>Zona</b> <br>
 					<div class="input-group">
-						<select class="form-control form-select select2" name="plaza_usuario" id="plaza_usuario">
+						<select class="form-control select2" name="plaza_usuario[]" id="plaza_usuario" multiple>
 							<option value=""></option>
 							<option v-for="(v,k) in plaza_usuario" v-html="v" :value="k"></option>
 						</select>
@@ -16,12 +16,22 @@
 				</div>
 
 				<div class="col-sm-3">
+					<b>Canal</b> <br>
+					<div class="input-group">
+						<select class="form-control select2" name="canal_usuario[]" id="canal_usuario" multiple>
+							<option value=""></option>
+							<option v-for="(v,k) in canal_usuario" v-html="v" :value="k"></option>
+						</select>
+					</div>
+				</div>
+
+				<div class="col-sm-3">
 					<b>Fecha Inicio</b> <br>
 					{{ text_field_tag("fecha_inicio", '', {class:'form-control fecha'}) }}
-					<select class="form-control form-select select2" name="hora_inicio" id="hora_inicio" style="width: 60px;">
+					<select class="form-control select2" name="hora_inicio" id="hora_inicio" style="width: 60px;">
 						<option v-for="(v,k) in horas" v-html="v" :value="k"></option>
 					</select> :
-					<select class="form-control form-select select2" name="minuto_inicio" id="minuto_inicio" style="width: 60px;">
+					<select class="form-control select2" name="minuto_inicio" id="minuto_inicio" style="width: 60px;">
 						<option v-for="(v,k) in minutos" v-html="v" :value="k"></option>
 					</select>
 				</div>
@@ -50,6 +60,7 @@
                     plaza_usuario: {{ plaza_usuario|raw }},
                     horas: {{ horas|raw }},
                     minutos: {{ minutos|raw }},
+                    canal_usuario: {{ canal_usuario|raw }},
                 },
                 methods: {},
             });
